--- a/src/containers/Home/Containers/ Wherever/Style.scss
+++ b/src/containers/Home/Containers/ Wherever/Style.scss
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+    padding: 0px 10px;
     img{
-        width: 400px;
+        width: 97%;
         border-radius: 7px;
     }
     h2{
