--- a/src/containers/Detail/Conponent/Service/style.scss
+++ b/src/containers/Detail/Conponent/Service/style.scss
@@ -18,4 +18,10 @@
         font-size: 16px;
         color: rgb(113, 113, 113) !important;
     }
+    
 }
+.hr{
+    hr{
+     margin: 30px 0px;
+    }
+ }
